--- a/css/components/shared/carousel/carousel.css
+++ b/css/components/shared/carousel/carousel.css
@@ -7,23 +7,31 @@
 }
 .carousel__protector {
   position: relative;
-  border-radius: 32px;
-}
-.carousel__domains {
-  border-radius: 32px;
-  position: relative;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(216.04deg, rgb(69, 77, 223) 11.27%, rgb(51, 95, 215) 84.57%, rgb(80, 158, 225) 138.09%);
 }
 .carousel__trade {
   z-index: -2;
-  border-radius: 32px;
   background: linear-gradient(64.41deg, rgba(214, 126, 10, 0.26) 44.37%, rgba(255, 235, 55, 0) 102.8%), radial-gradient(55.22% 134.13% at 57.59% 0%, rgb(245, 223, 142) 0%, rgb(252, 198, 49) 33.21%, rgb(255, 157, 0) 79.02%);
+}
+.carousel__staking {
+  background: linear-gradient(189.57deg, rgb(232, 250, 254) -83.55%, rgb(182, 228, 255) -40.3%, rgb(204, 194, 254) 123.53%, rgb(198, 163, 255) 176.26%);
+}
+.carousel__v3 {
+  background: linear-gradient(239.62deg, rgba(49, 78, 119, 0.35) 15.52%, rgba(60, 46, 87, 0.35) 86.5%), linear-gradient(114.79deg, rgb(192, 64, 252) -17.76%, rgb(75, 60, 255) 99.88%);
+  z-index: -1;
+}
+.carousel__migrate {
+  background: linear-gradient(261.24deg, rgba(158, 63, 253, 0.12) 27.61%, rgba(98, 61, 255, 0.25) 76.11%), linear-gradient(247.24deg, rgb(83, 222, 233) -16.43%, rgb(168, 129, 252) 92.15%);
+}
+.carousel__teams {
+  background: linear-gradient(128.04deg, rgb(187, 211, 251) -23.79%, rgb(75, 60, 255) 121.4%);
+}
+.carousel__perpetual {
+  background: linear-gradient(to bottom, rgb(118, 69, 217) 0%, rgb(69, 42, 122) 100%);
 }
 .carousel__item--selected {
   display: block;
   width: 100%;
+  border-radius: 32px;
 }
 .carousel__item {
   display: none;
@@ -34,6 +42,7 @@
   border-radius: 32px;
   position: absolute;
   overflow: hidden;
+  max-height: 100%;
 }
 .carousel__bg-image {
   transform: translateX(-14px);
@@ -42,12 +51,112 @@
   object-position: center;
 }
 .carousel__bg--trade {
-  position: absolute;
-  top: 0;
+  bottom: 20px;
   z-index: -1;
 }
 .carousel__bg--trade img {
   max-width: 100%;
+  display: block;
+}
+.carousel__bg--staking-coin {
+  top: 20px;
+  right: 410px;
+}
+.carousel__bg--staking-coin img {
+  max-width: 140px;
+  display: block;
+}
+.carousel__bg--staking-coin-right {
+  bottom: 20px;
+  right: 20px;
+}
+.carousel__bg--staking-coin-right img {
+  max-width: 61px;
+  display: block;
+}
+.carousel__bg--v3-moon {
+  top: 20px;
+  right: 20px;
+  z-index: -1;
+}
+.carousel__bg--v3-moon img {
+  max-width: 595px;
+  display: block;
+}
+.carousel__animated-image {
+  position: absolute;
+}
+.carousel__animated-image--top {
+  top: -38px;
+  right: 373px;
+  animation: 3.5s ease-in-out 0s infinite normal none running astronaut;
+}
+.carousel__animated-image--top img {
+  max-width: 147px;
+  display: block;
+}
+.carousel__animated-image--bottom {
+  bottom: 55px;
+  right: 331px;
+  animation: 2.5s ease-in-out 0s infinite normal none running astronaut;
+}
+.carousel__animated-image--bottom img {
+  max-width: 70px;
+  display: block;
+}
+.carousel__animated-image--right {
+  top: 22px;
+  right: -2px;
+  animation: 5.5s ease-in-out 0s infinite normal none running astronaut;
+}
+.carousel__animated-image--right img {
+  max-width: 72px;
+  display: block;
+}
+.carousel__animated-image--staking-star-sm {
+  top: 76px;
+  right: 518px;
+  animation: 3s ease-in-out 1.2s infinite normal none running starTransparent;
+}
+.carousel__animated-image--staking-star-sm img {
+  display: block;
+  max-width: 21px;
+}
+.carousel__animated-image--staking-star-big {
+  top: 105px;
+  right: 412px;
+  animation: 3s ease-in-out 0.5s infinite normal none running starTransparent;
+}
+.carousel__animated-image--staking-star-big img {
+  max-width: 33px;
+  display: block;
+}
+.carousel__animated-image--v3-eth {
+  top: 20px;
+  right: 443px;
+  animation: 10.5s ease-in-out 1.5s infinite normal none running eth;
+}
+.carousel__animated-image--v3-eth img {
+  max-width: 208px;
+  display: block;
+}
+.carousel__animated-image--v3-flag {
+  top: 20px;
+  right: 92px;
+  z-index: -2;
+  animation: 5.5s ease-in-out 1.5s infinite normal none running flag;
+}
+.carousel__animated-image--v3-flag img {
+  max-width: 150px;
+  display: block;
+}
+.carousel__animated-image--v3-coin {
+  top: 20px;
+  right: 20px;
+  animation: 12.5s ease-in-out 0s infinite normal none running coin;
+}
+.carousel__animated-image--v3-coin img {
+  max-width: 204px;
   display: block;
 }
 .carousel__left {
@@ -66,7 +175,19 @@
 .carousel__logo-img img {
   max-width: 119px;
 }
-.carousel__text {
+.carousel__logo-img--staking {
+  max-height: 29px;
+  margin: 0;
+}
+.carousel__logo-img--staking img {
+  max-width: 403px;
+  display: block;
+}
+.carousel__logo-img--teams {
+  margin-top: 3px;
+  margin-bottom: 0;
+}
+.carousel__info {
   position: relative;
   width: 100%;
   max-height: 144px;
@@ -76,6 +197,7 @@
   justify-content: center;
   flex-direction: column;
   align-items: flex-start;
+  z-index: 1;
 }
 .carousel__trade-text {
   font-weight: 600;
@@ -91,6 +213,65 @@
   font-size: 40px;
   text-shadow: rgba(0, 0, 0, 0.25) 0px 2px 2px;
   margin-bottom: 12px;
+}
+.carousel__staking-text {
+  color: rgb(40, 13, 95);
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  margin: 5px 0;
+  line-height: 101%;
+}
+.carousel__v3-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 24px;
+  font-weight: 600;
+  gap: 5px;
+  line-height: 110%;
+  margin-top: 10px;
+  margin-bottom: 8px;
+}
+.carousel__migrate-text {
+  color: white;
+  line-height: 110%;
+  font-weight: 600;
+}
+.carousel__migrate-text--big {
+  font-size: 40px;
+  line-height: 110%;
+  text-shadow: rgba(0, 0, 0, 0.25) 0px 2px 2px;
+  margin-bottom: 12px;
+}
+.carousel__migrate-text--sm {
+  font-size: 21px;
+  margin-bottom: 16px;
+  text-shadow: rgba(0, 0, 0, 0.25) 0px 4px 4px;
+}
+.carousel__teams-text {
+  color: white;
+  line-height: 110%;
+  font-weight: 600;
+  font-size: 40px;
+  line-height: 110%;
+  text-shadow: rgba(0, 0, 0, 0.25) 0px 2px 2px;
+  margin-top: 10px;
+  margin-bottom: 21px;
+}
+.carousel__perpetual-text {
+  font-size: 40px;
+  color: white;
+  margin-bottom: 16px;
+  font-weight: 600;
+  background: linear-gradient(to bottom, rgb(118, 69, 217) 0%, rgb(69, 42, 122) 100%);
+  line-height: 1.1;
+  -webkit-text-stroke: 6px transparent;
+  text-shadow: rgba(0, 0, 0, 0.25) 0px 4px 4px;
+  text-transform: uppercase;
+  background-clip: unset;
+  -webkit-background-clip: text;
 }
 .carousel__gradient-text {
   font-weight: 600;
@@ -122,6 +303,68 @@
   -webkit-background-clip: text;
   margin-bottom: 10px;
 }
+.carousel__gradient-text--staking {
+  position: relative;
+  font-size: 24px;
+  background: linear-gradient(166.02deg, rgb(255, 178, 55) -5.1%, rgb(255, 235, 55) 75.24%);
+  filter: unset;
+  background-clip: unset;
+  -webkit-background-clip: text;
+  font-feature-settings: "liga" 0;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: 10px;
+  margin-left: 3px;
+}
+.carousel__gradient-text--staking::after {
+  content: "ETH to WBETH conversion and earn ETH staking rewards!";
+  position: absolute;
+  top: 0;
+  left: 0;
+  letter-spacing: 0.01em;
+  text-shadow: rgba(0, 0, 0, 0.2) 1.27551px 1.27551px 1.02041px;
+  background: linear-gradient(166.02deg, rgb(255, 178, 55) -5.1%, rgb(255, 235, 55) 75.24%);
+  z-index: -1;
+  background-clip: unset;
+  -webkit-background-clip: text;
+  -webkit-text-stroke: 5px rgb(118, 69, 217);
+  -webkit-text-fill-color: transparent;
+}
+.carousel__gradient-text--v3 {
+  position: relative;
+  font-size: 40px;
+  background: linear-gradient(166.02deg, rgb(255, 178, 55) -5.1%, rgb(255, 235, 55) 75.24%);
+  filter: unset;
+  background-clip: unset;
+  -webkit-background-clip: text;
+  font-feature-settings: "liga" 0;
+  -webkit-text-fill-color: transparent;
+  margin: 0;
+}
+.carousel__gradient-text--v3::after {
+  content: "Ev3ryone's Favourite D3X";
+  position: absolute;
+  top: 0;
+  left: 0;
+  letter-spacing: 0.01em;
+  text-shadow: rgba(0, 0, 0, 0.2) 1.27551px 1.27551px 1.02041px;
+  background: linear-gradient(166.02deg, rgb(255, 178, 55) -5.1%, rgb(255, 235, 55) 75.24%);
+  z-index: -1;
+  background-clip: unset;
+  -webkit-background-clip: text;
+  -webkit-text-stroke: 8px rgb(101, 50, 205);
+  -webkit-text-fill-color: transparent;
+}
+.carousel__gradient-text--perpetual {
+  font-size: 24px;
+  margin-bottom: 8px;
+  letter-spacing: unset;
+  background: linear-gradient(rgb(255, 216, 0), rgb(235, 140, 0));
+  line-height: 1.1;
+  filter: unset;
+  background-clip: unset;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 .carousel__links {
   display: flex;
   align-items: center;
@@ -140,14 +383,14 @@
   border-radius: 16px;
   transition: background-color 0.2s ease 0s, opacity 0.2s ease 0s;
 }
-.carousel__links a:first-child {
-  padding-left: 0;
-}
 .carousel__links a svg {
   fill: white;
 }
 .carousel__links a:hover {
   opacity: 0.65;
+}
+.carousel__links--protector a:first-child {
+  padding-left: 0px;
 }
 .carousel__links--trade {
   gap: 8px;
@@ -169,6 +412,80 @@
 .carousel__links--trade a:last-child svg {
   fill: #1fc7d4;
 }
+.carousel__links--staking {
+  margin-top: 10px;
+}
+.carousel__links--staking a {
+  letter-spacing: 0.03em;
+}
+.carousel__links--staking a:first-child {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px -2px 0px inset;
+  gap: 4px;
+  background-color: #1fc7d4;
+  padding: 4px 8px;
+}
+.carousel__links--staking a:last-child {
+  background-color: white;
+  color: #1fc7d4;
+  gap: 4px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px -2px 0px inset;
+  padding-right: 12px;
+}
+.carousel__links--staking a:last-child svg {
+  fill: #1fc7d4;
+}
+.carousel__links--v3 {
+  margin-top: 10px;
+}
+.carousel__links--v3 a {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px -2px 0px inset;
+  gap: 4px;
+  background-color: #1fc7d4;
+  padding: 4px 8px;
+  letter-spacing: 0.03em;
+}
+.carousel__links--v3 a svg {
+  fill: white;
+}
+.carousel__links--migrate {
+  gap: 8px;
+}
+.carousel__links--migrate a {
+  letter-spacing: 0.03em;
+}
+.carousel__links--migrate a:first-child {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px -2px 0px inset;
+  gap: 4px;
+  background-color: #1fc7d4;
+  padding: 4px 8px;
+}
+.carousel__links--migrate a:last-child {
+  background-color: white;
+  color: #1fc7d4;
+  gap: 4px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px -2px 0px inset;
+}
+.carousel__links--migrate a:last-child svg {
+  fill: #1fc7d4;
+}
+.carousel__links--teams a {
+  background-color: #1fc7d4;
+  padding: 0 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: rgba(14, 14, 44, 0.4) 0px -1px 0px 0px inset;
+  gap: 4px;
+}
+.carousel__links--perpetual a {
+  background-color: #1fc7d4;
+  padding: 0 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: rgba(14, 14, 44, 0.4) 0px -1px 0px 0px inset;
+  gap: 4px;
+}
 .carousel__separator-line {
   background: rgb(255, 255, 255);
   height: 10px;
@@ -181,7 +498,6 @@
   right: 26px;
 }
 .carousel__bunny-image--protector {
-  position: absolute;
   bottom: 0;
   right: 26px;
 }
@@ -190,12 +506,52 @@
   display: block;
 }
 .carousel__bunny-image--trade {
-  position: absolute;
   bottom: 20px;
   right: 75px;
 }
 .carousel__bunny-image--trade img {
   max-width: 220px;
+  display: block;
+}
+.carousel__bunny-image--staking {
+  bottom: 20px;
+  right: 46px;
+}
+.carousel__bunny-image--staking img {
+  max-width: 334px;
+  display: block;
+}
+.carousel__bunny-image--v3 {
+  right: 173px;
+  bottom: -11px;
+}
+.carousel__bunny-image--v3 img {
+  max-width: 221px;
+  display: block;
+}
+.carousel__bunny-image--migrate {
+  bottom: 20px;
+  right: 40px;
+}
+.carousel__bunny-image--migrate img {
+  max-width: 300px;
+  display: block;
+}
+.carousel__bunny-image--teams {
+  right: 20px;
+  top: 0;
+}
+.carousel__bunny-image--teams img {
+  max-width: 930px;
+  height: 231px;
+  display: block;
+}
+.carousel__bunny-image--perpetual {
+  right: 20px;
+  bottom: 20px;
+}
+.carousel__bunny-image--perpetual img {
+  max-width: 392px;
   display: block;
 }
 .carousel__right-star {
@@ -251,6 +607,40 @@
 }
 .carousel__button--active {
   opacity: 1;
+}
+
+@keyframes eth {
+  0% {
+    transform: translate(0px, 0px);
+  }
+  50% {
+    transform: translate(0px, 10px);
+  }
+  100% {
+    transform: translate(0px, 0px);
+  }
+}
+@keyframes flag {
+  0% {
+    transform: translate(0px, 0px);
+  }
+  50% {
+    transform: translate(2px, 2px);
+  }
+  100% {
+    transform: translate(0px, 0px);
+  }
+}
+@keyframes coin {
+  0% {
+    transform: translate(0px, 0px);
+  }
+  50% {
+    transform: translate(-5px, -5px);
+  }
+  100% {
+    transform: translate(0px, 0px);
+  }
 }
 
 /*# sourceMappingURL=carousel.css.map */
