--- a/css/components/shared/carousel/carousel.scss
+++ b/css/components/shared/carousel/carousel.scss
@@ -6,23 +6,9 @@
   display: flex;
   &__protector {
     position: relative;
-    border-radius: 32px;
-  }
-  &__domains {
-    border-radius: 32px;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(
-      216.04deg,
-      rgb(69, 77, 223) 11.27%,
-      rgb(51, 95, 215) 84.57%,
-      rgb(80, 158, 225) 138.09%
-    );
   }
   &__trade {
     z-index: -2;
-    border-radius: 32px;
     background: linear-gradient(
         64.41deg,
         rgba(214, 126, 10, 0.26) 44.37%,
@@ -35,9 +21,58 @@
         rgb(255, 157, 0) 79.02%
       );
   }
+  &__staking {
+    background: linear-gradient(
+      189.57deg,
+      rgb(232, 250, 254) -83.55%,
+      rgb(182, 228, 255) -40.3%,
+      rgb(204, 194, 254) 123.53%,
+      rgb(198, 163, 255) 176.26%
+    );
+  }
+  &__v3 {
+    background: linear-gradient(
+        239.62deg,
+        rgba(49, 78, 119, 0.35) 15.52%,
+        rgba(60, 46, 87, 0.35) 86.5%
+      ),
+      linear-gradient(
+        114.79deg,
+        rgb(192, 64, 252) -17.76%,
+        rgb(75, 60, 255) 99.88%
+      );
+    z-index: -1;
+  }
+  &__migrate {
+    background: linear-gradient(
+        261.24deg,
+        rgba(158, 63, 253, 0.12) 27.61%,
+        rgba(98, 61, 255, 0.25) 76.11%
+      ),
+      linear-gradient(
+        247.24deg,
+        rgb(83, 222, 233) -16.43%,
+        rgb(168, 129, 252) 92.15%
+      );
+  }
+  &__teams {
+    background: linear-gradient(
+      128.04deg,
+      rgb(187, 211, 251) -23.79%,
+      rgb(75, 60, 255) 121.4%
+    );
+  }
+  &__perpetual {
+    background: linear-gradient(
+      to bottom,
+      rgb(118, 69, 217) 0%,
+      rgb(69, 42, 122) 100%
+    );
+  }
   &__item--selected {
     display: block;
     width: 100%;
+    border-radius: 32px;
   }
   &__item {
     display: none;
@@ -48,6 +83,7 @@
     border-radius: 32px;
     position: absolute;
     overflow: hidden;
+    max-height: 100%;
     &-image {
       transform: translateX(-14px);
       display: block;
@@ -55,11 +91,113 @@
       object-position: center;
     }
     &--trade {
-      position: absolute;
-      top: 0;
+      bottom: 20px;
       z-index: -1;
       img {
         max-width: 100%;
+        display: block;
+      }
+    }
+    &--staking-coin {
+      top: 20px;
+      right: 410px;
+      img {
+        max-width: 140px;
+        display: block;
+      }
+      &-right {
+        bottom: 20px;
+        right: 20px;
+        img {
+          max-width: 61px;
+          display: block;
+        }
+      }
+    }
+    &--v3-moon {
+      top: 20px;
+      right: 20px;
+      z-index: -1;
+      img {
+        max-width: 595px;
+        display: block;
+      }
+    }
+  }
+  &__animated-image {
+    position: absolute;
+    &--top {
+      top: -38px;
+      right: 373px;
+      animation: 3.5s ease-in-out 0s infinite normal none running astronaut;
+      img {
+        max-width: 147px;
+        display: block;
+      }
+    }
+    &--bottom {
+      bottom: 55px;
+      right: 331px;
+      animation: 2.5s ease-in-out 0s infinite normal none running astronaut;
+      img {
+        max-width: 70px;
+        display: block;
+      }
+    }
+    &--right {
+      top: 22px;
+      right: -2px;
+      animation: 5.5s ease-in-out 0s infinite normal none running astronaut;
+      img {
+        max-width: 72px;
+        display: block;
+      }
+    }
+    &--staking-star-sm {
+      top: 76px;
+      right: 518px;
+      animation: 3s ease-in-out 1.2s infinite normal none running
+        starTransparent;
+      img {
+        display: block;
+        max-width: 21px;
+      }
+    }
+    &--staking-star-big {
+      top: 105px;
+      right: 412px;
+      animation: 3s ease-in-out 0.5s infinite normal none running
+        starTransparent;
+      img {
+        max-width: 33px;
+        display: block;
+      }
+    }
+    &--v3-eth {
+      top: 20px;
+      right: 443px;
+      animation: 10.5s ease-in-out 1.5s infinite normal none running eth;
+      img {
+        max-width: 208px;
+        display: block;
+      }
+    }
+    &--v3-flag {
+      top: 20px;
+      right: 92px;
+      z-index: -2;
+      animation: 5.5s ease-in-out 1.5s infinite normal none running flag;
+      img {
+        max-width: 150px;
+        display: block;
+      }
+    }
+    &--v3-coin {
+      top: 20px;
+      right: 20px;
+      animation: 12.5s ease-in-out 0s infinite normal none running coin;
+      img {
+        max-width: 204px;
         display: block;
       }
     }
@@ -79,8 +217,20 @@
     img {
       max-width: 119px;
     }
+    &--staking {
+      max-height: 29px;
+      margin: 0;
+      img {
+        max-width: 403px;
+        display: block;
+      }
+    }
+    &--teams {
+      margin-top: 3px;
+      margin-bottom: 0;
+    }
   }
-  &__text {
+  &__info {
     position: relative;
     width: 100%;
     max-height: 144px;
@@ -90,6 +240,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: flex-start;
+    z-index: 1;
   }
   &__trade-text {
     font-weight: 600;
@@ -105,6 +256,69 @@
       text-shadow: rgba(0, 0, 0, 0.25) 0px 2px 2px;
       margin-bottom: 12px;
     }
+  }
+  &__staking-text {
+    color: rgb(40, 13, 95);
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    margin: 5px 0;
+    line-height: 101%;
+  }
+  &__v3-text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 24px;
+    font-weight: 600;
+    gap: 5px;
+    line-height: 110%;
+    margin-top: 10px;
+    margin-bottom: 8px;
+  }
+  &__migrate-text {
+    color: white;
+    line-height: 110%;
+    font-weight: 600;
+    &--big {
+      font-size: 40px;
+      line-height: 110%;
+      text-shadow: rgba(0, 0, 0, 0.25) 0px 2px 2px;
+      margin-bottom: 12px;
+    }
+    &--sm {
+      font-size: 21px;
+      margin-bottom: 16px;
+      text-shadow: rgba(0, 0, 0, 0.25) 0px 4px 4px;
+    }
+  }
+  &__teams-text {
+    color: white;
+    line-height: 110%;
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 110%;
+    text-shadow: rgba(0, 0, 0, 0.25) 0px 2px 2px;
+    margin-top: 10px;
+    margin-bottom: 21px;
+  }
+  &__perpetual-text {
+    font-size: 40px;
+    color: white;
+    margin-bottom: 16px;
+    font-weight: 600;
+    background: linear-gradient(
+      to bottom,
+      rgb(118, 69, 217) 0%,
+      rgb(69, 42, 122) 100%
+    );
+    line-height: 1.1;
+    -webkit-text-stroke: 6px transparent;
+    text-shadow: rgba(0, 0, 0, 0.25) 0px 4px 4px;
+    text-transform: uppercase;
+    background-clip: unset;
+    -webkit-background-clip: text;
   }
   &__gradient-text {
     font-weight: 600;
@@ -124,7 +338,6 @@
     -webkit-text-fill-color: transparent;
     background-clip: unset;
     -webkit-background-clip: text;
-
     &--small {
       font-size: 19px;
       margin: 0;
@@ -144,6 +357,84 @@
       -webkit-background-clip: text;
       margin-bottom: 10px;
     }
+    &--staking {
+      position: relative;
+      font-size: 24px;
+      background: linear-gradient(
+        166.02deg,
+        rgb(255, 178, 55) -5.1%,
+        rgb(255, 235, 55) 75.24%
+      );
+      filter: unset;
+      background-clip: unset;
+      -webkit-background-clip: text;
+      font-feature-settings: "liga" 0;
+      -webkit-text-fill-color: transparent;
+      margin-bottom: 10px;
+      margin-left: 3px;
+      &::after {
+        content: "ETH to WBETH conversion and earn ETH staking rewards!";
+        position: absolute;
+        top: 0;
+        left: 0;
+        letter-spacing: 0.01em;
+        text-shadow: rgba(0, 0, 0, 0.2) 1.27551px 1.27551px 1.02041px;
+        background: linear-gradient(
+          166.02deg,
+          rgb(255, 178, 55) -5.1%,
+          rgb(255, 235, 55) 75.24%
+        );
+        z-index: -1;
+        background-clip: unset;
+        -webkit-background-clip: text;
+        -webkit-text-stroke: 5px rgb(118, 69, 217);
+        -webkit-text-fill-color: transparent;
+      }
+    }
+    &--v3 {
+      position: relative;
+      font-size: 40px;
+      background: linear-gradient(
+        166.02deg,
+        rgb(255, 178, 55) -5.1%,
+        rgb(255, 235, 55) 75.24%
+      );
+      filter: unset;
+      background-clip: unset;
+      -webkit-background-clip: text;
+      font-feature-settings: "liga" 0;
+      -webkit-text-fill-color: transparent;
+      margin: 0;
+      &::after {
+        content: "Ev3ryone's Favourite D3X";
+        position: absolute;
+        top: 0;
+        left: 0;
+        letter-spacing: 0.01em;
+        text-shadow: rgba(0, 0, 0, 0.2) 1.27551px 1.27551px 1.02041px;
+        background: linear-gradient(
+          166.02deg,
+          rgb(255, 178, 55) -5.1%,
+          rgb(255, 235, 55) 75.24%
+        );
+        z-index: -1;
+        background-clip: unset;
+        -webkit-background-clip: text;
+        -webkit-text-stroke: 8px rgb(101, 50, 205);
+        -webkit-text-fill-color: transparent;
+      }
+    }
+    &--perpetual {
+      font-size: 24px;
+      margin-bottom: 8px;
+      letter-spacing: unset;
+      background: linear-gradient(rgb(255, 216, 0), rgb(235, 140, 0));
+      line-height: 1.1;
+      filter: unset;
+      background-clip: unset;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
   }
   &__links {
     display: flex;
@@ -161,14 +452,18 @@
       align-items: center;
       border-radius: 16px;
       transition: background-color 0.2s ease 0s, opacity 0.2s ease 0s;
-      &:first-child {
-        padding-left: 0;
-      }
       svg {
         fill: white;
       }
       &:hover {
         opacity: 0.65;
+      }
+    }
+    &--protector {
+      a {
+        &:first-child {
+          padding-left: 0px;
+        }
       }
     }
     &--trade {
@@ -193,6 +488,84 @@
         }
       }
     }
+    &--staking {
+      margin-top: 10px;
+      a {
+        letter-spacing: 0.03em;
+        &:first-child {
+          box-shadow: rgba(0, 0, 0, 0.1) 0px -2px 0px inset;
+          gap: 4px;
+          background-color: #1fc7d4;
+          padding: 4px 8px;
+        }
+        &:last-child {
+          background-color: white;
+          color: #1fc7d4;
+          gap: 4px;
+          box-shadow: rgba(0, 0, 0, 0.1) 0px -2px 0px inset;
+          padding-right: 12px;
+          svg {
+            fill: #1fc7d4;
+          }
+        }
+      }
+    }
+    &--v3 {
+      margin-top: 10px;
+      a {
+        box-shadow: rgba(0, 0, 0, 0.1) 0px -2px 0px inset;
+        gap: 4px;
+        background-color: #1fc7d4;
+        padding: 4px 8px;
+        letter-spacing: 0.03em;
+        svg {
+          fill: white;
+        }
+      }
+    }
+    &--migrate {
+      gap: 8px;
+      a {
+        letter-spacing: 0.03em;
+        &:first-child {
+          box-shadow: rgba(0, 0, 0, 0.1) 0px -2px 0px inset;
+          gap: 4px;
+          background-color: #1fc7d4;
+          padding: 4px 8px;
+        }
+        &:last-child {
+          background-color: white;
+          color: #1fc7d4;
+          gap: 4px;
+          box-shadow: rgba(0, 0, 0, 0.1) 0px -2px 0px inset;
+          svg {
+            fill: #1fc7d4;
+          }
+        }
+      }
+    }
+    &--teams {
+      a {
+        background-color: #1fc7d4;
+        padding: 0 24px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        box-shadow: rgba(14, 14, 44, 0.4) 0px -1px 0px 0px inset;
+        gap: 4px;
+      }
+    }
+    &--perpetual {
+      a {
+        background-color: #1fc7d4;
+        padding: 0 24px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        box-shadow: rgba(14, 14, 44, 0.4) 0px -1px 0px 0px inset;
+        gap: 4px;
+      }
+    }
   }
   &__separator-line {
     background: rgb(255, 255, 255);
@@ -206,7 +579,6 @@
     right: 26px;
 
     &--protector {
-      position: absolute;
       bottom: 0;
       right: 26px;
       img {
@@ -215,11 +587,51 @@
       }
     }
     &--trade {
-      position: absolute;
       bottom: 20px;
       right: 75px;
       img {
         max-width: 220px;
+        display: block;
+      }
+    }
+    &--staking {
+      bottom: 20px;
+      right: 46px;
+      img {
+        max-width: 334px;
+        display: block;
+      }
+    }
+    &--v3 {
+      right: 173px;
+      bottom: -11px;
+      img {
+        max-width: 221px;
+        display: block;
+      }
+    }
+    &--migrate {
+      bottom: 20px;
+      right: 40px;
+      img {
+        max-width: 300px;
+        display: block;
+      }
+    }
+    &--teams {
+      right: 20px;
+      top: 0;
+      img {
+        max-width: 930px;
+        height: 231px;
+        display: block;
+      }
+    }
+    &--perpetual {
+      right: 20px;
+      bottom: 20px;
+      img {
+        max-width: 392px;
         display: block;
       }
     }
@@ -278,5 +690,41 @@
     &--active {
       opacity: 1;
     }
+  }
+}
+
+@keyframes eth {
+  0% {
+    transform: translate(0px, 0px);
+  }
+  50% {
+    transform: translate(0px, 10px);
+  }
+  100% {
+    transform: translate(0px, 0px);
+  }
+}
+
+@keyframes flag {
+  0% {
+    transform: translate(0px, 0px);
+  }
+  50% {
+    transform: translate(2px, 2px);
+  }
+  100% {
+    transform: translate(0px, 0px);
+  }
+}
+
+@keyframes coin {
+  0% {
+    transform: translate(0px, 0px);
+  }
+  50% {
+    transform: translate(-5px, -5px);
+  }
+  100% {
+    transform: translate(0px, 0px);
   }
 }
